--- a/main.tex
+++ b/main.tex
@@ -404,6 +404,66 @@ The \textbf{Patent Cooperation Treaty} (PCT) is an international patent law trea
 
 \section{September 29, 2025}
 
+\begin{enumerate}[label=\textbf{Question \arabic*}]
 
+    \item % Question 1
+   An Austrian applicant A files an international application in German with the EPO. Before publication of the application, A sells this international application to US-company B, based in San Francisco, USA.
+You are a European patent attorney representing company A and, after the purchase, company B in respect of this application.
+
+
+For each of the statements below, indicate whether the statement is true or false:
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  The change of applicant can be recorded by the IB during the international phase on request of the applicant (provided that the request is filed within the applicable time limit). 
+\item A request to record the change of applicant can be filed with the EPO.
+\item The change of applicant can be recorded by the IB during the national phase after the expiry of 30 months of priority date, with effect to all designated offices (provided that the request is filed within the applicable time limit).
+\item The change of applicant can no longer be recorded during the international phase once international publication has taken place. 
+\item The change of applicant can be recorded by the IB after the expiry of 30 months from the priority date until expiry of 31 months from the priority date, but such recordal only has effect with respect to the designated offices where the 31
+month-period applies for national/regional entry.
+
+   \end{enumerate}
+    
+    \item % Question 2
+An applicant resident in Spain filed an international application in Spanish at the Spanish national Office indicating the EPO as International Searching Authority. Within one month the applicant furnishes pursuant to PCT Rule 12.3(a) a translation of the application into English.
+    \begin{enumerate}[label=(\alph*)]
+        \item   In which language will the international application be published?
+\item  Which parts of the international application will (also) be published in English?
+    \end{enumerate}
+
+    \end{enumerate}
+    
+\begin{center}
+
+\p \p \p
+ 
+\end{center}
+
+\begin{enumerate}[label=\textbf{Answer \arabic*}]
+
+    \item % Question 1
+   An Austrian applicant A files an international application in German with the EPO. Before publication of the application, A sells this international application to US-company B, based in San Francisco, USA.
+You are a European patent attorney representing company A and, after the purchase, company B in respect of this application.
+
+
+For each of the statements below, indicate whether the statement is true or false:
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  \textbf{\textsc{True}} --- [\textbf{R. 92\textit{bis}.1}] deals with recording of changes in certain indications
+in the Request or the Demand. Data changes on Applicant/Common Representative/Common Agent will be recorded by the IB up until 30 months after priority date. 
+\item  \textbf{\textsc{True}} --- it may be filed with the rO (in this case, the EPO), but it is strongly recommended to go directly to the IB especially if closer to the 30-month deadline. 
+\item  \textbf{\textsc{False}} --- [\textbf{R. 92\textit{bis}.1(b)} \& \textsc{AG--IP 11.021}] make it clear that after the deadline, the change must be requested directly with the dO/eO. 
+\item \textbf{\textsc{False}} --- if change is to be taken into account before international publication, it should reach the IB before deadline for technical preparations, i.e., 1 day before the 15$^{\mathrm{th}}$ day before scheduled publication (see also: [\textsc{AG--IP 9.014}]).
+\item \textbf{\textsc{False}} --- [\textbf{R. 92\textit{bis}.1(b)} \& \textsc{AG--IP 11.021}] make it clear that after the deadline, the change must be requested directly with the dO/eO, regardless of exact limit for entry into national/regional phase. 
+    \end{enumerate}
+
+
+
+    \item % Question 2
+An applicant resident in Spain filed an international application in Spanish at the Spanish national Office indicating the EPO as International Searching Authority. Within one month the applicant furnishes pursuant to PCT Rule 12.3(a) a translation of the application into English.
+    \begin{enumerate}[label=(\alph*)]
+        \item  Spanish --- because it is a language of publication and the PCTa was filed in the language of publication [\textbf{R. 48.3(a)}].
+\item  The declaration under \textbf{Art. 17.2(a)} [\textit{i.e., non-patentability}], the title of invention, the abstract and any text matter pertaining to the figure accompanying the abstract shall be published in English by the IB [\textbf{R. 48.3(a)}]..
+    \end{enumerate}
+   \end{enumerate}
 
 \end{document}
