--- a/main.tex
+++ b/main.tex
@@ -430,6 +430,27 @@ An applicant resident in Spain filed an international application in Spanish at 
 \item  Which parts of the international application will (also) be published in English?
     \end{enumerate}
 
+    \item % Question 3
+A Dutch applicant filed a European patent application with the EPO on Friday 11 May 2018 comprising just a description and drawings, but no claims. On the same day, he filed the same documents with the IB together with a PCT Request Form. On Wednesday 23 May 2018, he filed a set of claims with the EPO and also with the IB, referring to his earlier submissions of 11 May 2018.
+
+
+For each of the statements below, indicate whether the statement is true or false:
+
+The filing date accorded to the European patent application is...
+
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  … 11 May 2018.
+\item … 23 May 2018.
+    
+\vspace{0.5cm}
+
+The filing date accorded to the international patent application is ...
+ 
+        \item  … 11 May 2018.
+\item … 23 May 2018.
+    \end{enumerate}
+
     \end{enumerate}
     
 \begin{center}
@@ -462,8 +483,30 @@ in the Request or the Demand. Data changes on Applicant/Common Representative/Co
 An applicant resident in Spain filed an international application in Spanish at the Spanish national Office indicating the EPO as International Searching Authority. Within one month the applicant furnishes pursuant to PCT Rule 12.3(a) a translation of the application into English.
     \begin{enumerate}[label=(\alph*)]
         \item  Spanish --- because it is a language of publication and the PCTa was filed in the language of publication [\textbf{R. 48.3(a)}].
-\item  The declaration under \textbf{Art. 17.2(a)} [\textit{i.e., non-patentability}], the title of invention, the abstract and any text matter pertaining to the figure accompanying the abstract shall be published in English by the IB [\textbf{R. 48.3(a)}]..
+\item  The declaration under \textbf{Art. 17.2(a)} [\textit{i.e., non-patentability}], the title of invention, the abstract and any text matter pertaining to the figure accompanying the abstract shall be published in English by the IB [\textbf{R. 48.3(a)}].
     \end{enumerate}
-   \end{enumerate}
+
+   \item % Question 3
+A Dutch applicant filed a European patent application with the EPO on Friday 11 May 2018 comprising just a description and drawings, but no claims. On the same day, he filed the same documents with the IB together with a PCT Request Form. On Wednesday 23 May 2018, he filed a set of claims with the EPO and also with the IB, referring to his earlier submissions of 11 May 2018.
+
+
+For each of the statements below, indicate whether the statement is true or false:
+
+The filing date accorded to the European patent application is...
+
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  … 11 May 2018. –––   \textbf{\textsc{True}}. For EP you don't need a claim to accord a filing date. Assuming other formalities such as name of Applicant, indication a patent is sought, etc., have also been provided.
+\item … 23 May 2018. 
+    
+\vspace{0.5cm}
+
+The filing date accorded to the international patent application is ...
+ 
+        \item  … 11 May 2018.
+\item … 23 May 2018. –––   \textbf{\textsc{True}}. For PCT, you need a claim to accord a filing date. He filed the claim/s within the 2-month deadline of \textbf{Rule 20.3(b)(i)}, so he will get a filing date on the later date within this 2-month window.
+    \end{enumerate}
+
+    \end{enumerate}
 
 \end{document}
