--- a/main.tex
+++ b/main.tex
@@ -451,8 +451,63 @@ The filing date accorded to the international patent application is ...
 \item … 23 May 2018.
     \end{enumerate}
 
-    \end{enumerate}
+    \item % Question 4
+An international application is jointly filed at the German national Office on 3 April 2017 by a British applicant and a German applicant claiming priority from an earlier German national application filed on 4 April 2016.
+
+
+For each of the statements below, indicate whether the statement is true or false:
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  All applicants must be indicated in the Request (PCT/RO/101).
+\item The rO considers it sufficient if the British applicant signs the Request.
+\item The receiving Office will invite the applicants to furnish any missing address, nationality and residence.
     
+\vspace{0.5cm}
+
+Later on the applicants wish to withdraw the priority claim.
+ 
+        \item The priority claim may be withdrawn until 3 October 2019.
+\item It is sufficient if the first-named applicant, being considered to be the common representative under R.90.2(b), signs the notice of withdrawal.
+\item  If the applicants would have appointed a common representative, the common representative may sign the notice of withdrawal.
+
+
+\vspace{0.5cm}
+
+Later on the international application enters the regional phase before the EPO.
+
+
+\item The EPO will ask for any missing indication of the applicants in the Request.
+
+
+    \end{enumerate}
+
+
+    \item % Question 5
+
+An international application is filed on 28 July 2018 indicating a priority date of 27 January 2018. The applicant wishes to correct the priority date to 26 September 2017 and asks you until when may he can request the competent authority of a correction of the priority date. Today is 12 November 2018.
+
+For each of the statements below, indicate whether the statement is true or false.
+
+The last day to request the correction is...
+
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  Wednesday 28 November 2018. 
+\item Monday 28 January 2019.
+\item Monday 27 May 2019.   
+\vspace{0.5cm}
+
+The request may be filed with…
+ 
+        \item the receiving Office.
+\item the International Bureau.
+
+
+
+    \end{enumerate}
+        \end{enumerate}
+
+
 \begin{center}
 
 \p \p \p
@@ -506,7 +561,58 @@ The filing date accorded to the international patent application is ...
         \item  … 11 May 2018.
 \item … 23 May 2018. –––   \textbf{\textsc{True}}. For PCT, you need a claim to accord a filing date. He filed the claim/s within the 2-month deadline of \textbf{Rule 20.3(b)(i)}, so he will get a filing date on the later date within this 2-month window.
     \end{enumerate}
+    \item % Question 4
+An international application is jointly filed at the German national Office on 3 April 2017 by a British applicant and a German applicant claiming priority from an earlier German national application filed on 4 April 2016.
+
+
+For each of the statements below, indicate whether the statement is true or false:
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  \textbf{\textsc{False}} --- [\textbf{R. 26.2\textit{bis}(b)} \& \textsc{AG--IP 5.032.}] make it clear that it is sufficient for one Applicant to be indicated in the Request.
+\item \textbf{\textsc{True}} --- [\textbf{R. 26.2}] makes it clear that it is sufficient for one Applicant to sign the Request. It is irrelevant whether he is entitled to file the PCTa.
+\item \textbf{\textsc{True}} --- [\textbf{R. 26.1} \& \textbf{R. 26.2}] provide for an invitation of corrections from \textbf{Art. 14(1)(b)} to be sent within 1 month of date of receipt, with a time limit of \textbf{2 months from the date of invitation} to provide the corrections.
+\vspace{0.5cm}
+
+Later on the applicants wish to withdraw the priority claim.
+ 
+ \item  \textbf{\textsc{False}} --- [\textbf{R. 90\textit{bis}.3}] makes it clear that a priority claim may be withdrawn at any point \newline \underline{before 30 months after the priority date}. In this case: \textsc{04.10.2018}.
+\item \textbf{\textsc{False}} --- [\textbf{R. 90\textit{bis}.5}] makes it clear that a (deemed) common representative may not sign any notice of withdrawals on behalf of all the applicants. 
+\item  \textbf{\textsc{False}} --- an appointed common representative may not withdraw a priority claim. [\textbf{R. 90\textit{bis}.5}] makes it clear that \underline{all} Applicants must sign the withdrawal notice.
+
+
+\vspace{0.5cm}
+
+Later on the international application enters the regional phase before the EPO.
+
+
+\item \textbf{\textsc{True}} --- [\textbf{R. 163(4) EPC}]??? --- \textit{Where, at the expiry of the period under Rule 159, paragraph 1, the address, the nationality or the State in which their residence or principal place of business is located is missing in respect of any applicant, the European Patent Office shall invite the applicant to furnish these indications within two months.}
+
 
     \end{enumerate}
+    \item % Question 5
+
+An international application is filed on 28 July 2018 indicating a priority date of 27 January 2018. The applicant wishes to correct the priority date to 26 September 2017 and asks you until when may he can request the competent authority of a correction of the priority date. Today is 12 November 2018.
+
+For each of the statements below, indicate whether the statement is true or false.
+
+The last day to request the correction is...
+
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  Wednesday 28 November 2018. --- \textbf{True} --- 4 months from international filing date.
+\item Monday 28 January 2019. --- \textbf{False} --- red herring as this is 16 months from the "new" priority date, but it is superceded by the earlier date of \textit{(a)}. Relevant Rule is [\textbf{R. 26\textit{bis}}] -- \textit{Correction or Addition of Priority Claim}.
+\item Monday 27 May 2019.   --- \textbf{False}.
+\vspace{0.5cm}
+    
+
+The request may be filed with…
+ 
+        \item the receiving Office --- \textbf{\textsc{True}} --- [\textbf{R. 26\textit{bis}.1}] makes it clear that either rO or IB can be used.
+\item the International Bureau --- \textbf{\textsc{True}} --- [\textbf{R. 26\textit{bis}.1}] makes it clear that either rO or IB can be used.
+
+
+
+    \end{enumerate}
+        \end{enumerate}
 
 \end{document}
