--- a/main.tex
+++ b/main.tex
@@ -505,6 +505,18 @@ The request may be filed with…
 
 
     \end{enumerate}
+
+\item % Q6
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  Can the applicant withdraw a priority claim made in the international application? If so, until when?
+\item To whom must the request be addressed? Who must sign the withdrawal?
+\item Is a fee due for the withdrawal of a priority claim? 
+
+\item What are the consequences of a withdrawal of a priority claim?
+
+     \end{enumerate}
+
         \end{enumerate}
 
 
@@ -577,7 +589,7 @@ Later on the applicants wish to withdraw the priority claim.
  
  \item  \textbf{\textsc{False}} --- [\textbf{R. 90\textit{bis}.3}] makes it clear that a priority claim may be withdrawn at any point \newline \underline{before 30 months after the priority date}. In this case: \textsc{04.10.2018}.
 \item \textbf{\textsc{False}} --- [\textbf{R. 90\textit{bis}.5}] makes it clear that a (deemed) common representative may not sign any notice of withdrawals on behalf of all the applicants. 
-\item  \textbf{\textsc{False}} --- an appointed common representative may not withdraw a priority claim. [\textbf{R. 90\textit{bis}.5}] makes it clear that \underline{all} Applicants must sign the withdrawal notice.
+\item  \textbf{\textsc{False}} --- an appointed common representative may not withdraw a priority claim. [\textbf{R. 90\textit{bis}.5}] makes it clear that \underline{all} Applicants must sign the withdrawal notice. ??? See also [\textsc{AG--IP 11.056.} ]
 
 
 \vspace{0.5cm}
@@ -613,6 +625,20 @@ The request may be filed with…
 
 
     \end{enumerate}
+
+\item % Q6
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  Yes, a priority claim for a PCTa may be withdrawn at any point until 30 months after the priority date.
+\item rO, IB or IPEA under \textbf{Art. 39(1)}. All Applicants must sign the withdrawal.
+\item All withdrawals are free of charge [\textsc{AG--IP 11.048}].
+
+\item International publication may be postponed by withdrawing the priority claim, as any time-limit computation (which has not already expired) then takes into account the "new" priority date after withdrawal. [\textbf{R. 90\textit{bis}.3(b)}].
+
+     \end{enumerate}
+
         \end{enumerate}
+
+
 
 \end{document}
