All HW Qs Week 2

--- a/main.tex
+++ b/main.tex
@@ -517,7 +517,21 @@ The request may be filed with…
 
      \end{enumerate}
 
-        \end{enumerate}
+
+\item % Q7
+
+Today, Monday 27 November 2017, an applicant wants to file an international application at the EPO as receiving Office claiming the priority of an earlier national application filed on 24 September 2016.
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  Is it still possible to file the international application and claim the priority?
+\item  If so, how must the applicant proceed?
+\item Do all rOs accept such requests?
+
+\item Are dOs required to accept the claimed priority?
+\item What about the EPO?
+
+     \end{enumerate}
+       \end{enumerate}
 
 
 \begin{center}
@@ -611,7 +625,7 @@ The last day to request the correction is...
 
 
     \begin{enumerate}[label=(\alph*)]
-        \item  Wednesday 28 November 2018. --- \textbf{True} --- 4 months from international filing date.
+        \item  Wednesday 28 November 2018. --- \textbf{True} --- 4 months from international filing date. (+ 1 month maybe under R. 26bis.2(b)??? ask Zsofia
 \item Monday 28 January 2019. --- \textbf{False} --- red herring as this is 16 months from the "new" priority date, but it is superceded by the earlier date of \textit{(a)}. Relevant Rule is [\textbf{R. 26\textit{bis}}] -- \textit{Correction or Addition of Priority Claim}.
 \item Monday 27 May 2019.   --- \textbf{False}.
 \vspace{0.5cm}
@@ -637,7 +651,20 @@ The request may be filed with…
 
      \end{enumerate}
 
-        \end{enumerate}
+\item % Q7
+
+Today, Monday 27 November 2017, an applicant wants to file an international application at the EPO as receiving Office claiming the priority of an earlier national application filed on 24 September 2016.
+
+    \begin{enumerate}[label=(\alph*)]
+        \item  No, --- [\textbf{R. 26\textit{bis}.3}] provides for restoration of the right of priority by the rO \newline \underline{within 2 months after the priority year ends}. In this case, we have $>$2 months by 1 day.
+\item  If he were able to do it, he would have to (i) file the request with the rO within the 2-month deadline; and (ii) state the reasons for failure to file on time; and (iii) preferably provide a declaration and/or evidence. He would also have to pay a fee depending on rO, and add the priority claim to the PCTa (if applicable) [\textbf{R. 26\textit{bis}.3}].
+\item  No; not all rOs accept such requests. Notable exceptions include \textsc{DE}, \textsc{KR} and \textsc{IN}. 
+
+\item No; no guarantees are made for the regional phase regarding the restored priority claim. [\textbf{R. 49\textit{ter}.2(e)}] provides for the dO having to give the Applicant an opportunity to make observations on any such intended refusal.
+\item The EPO applies the criterion of \underline{"due care"} [can always check this in \textsc{Annex C}]. \textit{Due care is considered to have been taken if non-compliance with the time limit results either from exceptional circumstances or from an isolated mistake within a normally satisfactory monitoring system.}
+
+     \end{enumerate}
+       \end{enumerate}
 
 
 
