--- a/main.tex
+++ b/main.tex
@@ -533,6 +533,140 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
      \end{enumerate}
        \end{enumerate}
 
+       \section{October 09, 2025}
+
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    L3-06 - T/F question (Basic selection) \\
+    An international application is filed by a Danish national at the Danish Patent and Trademark Office as receiving Office. \\
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*)]
+        \item The IA may be filed in…
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... Danish
+            \item ... English
+            \item ... Swedish
+        \end{enumerate}
+
+        \item The applicant may select as ISA:
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... the Danish national office.
+            \item ... the EPO
+            \item ... the Swedish national office.
+            \item ... the Nordic Patent Institute.
+        \end{enumerate}
+        
+        \item \textit{The application is filed in Danish.} \\
+        For each of the statements below, indicate whether the statement is true or false
+        
+        \vspace{0.5em}
+        The EPO as ISA…
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... does not require a translation for the purposes of international search.
+            \item ... requires a translation into any one of the 10 publication languages for the purposes of international search.
+            \item ... requires a translation into English, French or German for the purposes of international search.
+            \item[] \textit{The Nordic Patent Institute as ISA...}
+            \item ... does not require a translation for the purposes of international search.
+            \item ... requires a translation into any one of the 10 publication languages for the purposes of international search.
+            \item ... requires a translation into English, French or German for the purposes of international search.
+        \end{enumerate}
+
+        \item \textit{The applicant has filed the international application in Danish and has indicated the EPO as International Searching Authority. The applicant is in the progress of making a translation into English. The application was filed by fax with the Danish Patent and Trademark Office on a day on which the Danish Patent and Trademark Office and the International Bureau were closed.} \\
+        For each of the statements below, indicate whether the statement is true or false: \\
+        The translation must be filed ...
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... within one month from the date of receipt by the Danish Patent and Trademark Office to avoid any late furnishing fee(s).
+            \item ... within one month from the date of receipt by the EPO to avoid any late furnishing fee(s).
+            \item ... when the 1m period was missed, the translation may still be provided as long as a late furnishing fee is paid.
+            \item ... when the rO issues an invitation to supply a missing translation, the ultimate time limit to respond is always one month from the date of the invitation.
+        \end{enumerate}
+        
+        \item \textit{The applicant has timely filed the translation into English to the Danish Patent and Trademark Office.} \\
+        The international publication of the international application will take place in…
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... Danish.
+            \item ... English.
+            \item ... in Danish with the title and the abstract also in English.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 2
+    L3-08 - T/F question (Basic selection) \\
+    A PCT application was filed with the EPO. As the International Searching Authority, the EPO considered that the application was not unitary. The invention first mentioned in the claims was searched and an invitation to pay two additional international search fees was sent to the applicant last week, 8 March 2023. The third invention, which has not yet been searched, is the only invention that the applicant would like to pursue in the European phase before the EPO. \\
+    Today is 17 March 2023.
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false:
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item In the international PCT phase, the applicant can file a protest with the EPO and request that a full search is made. The protest is free of charge, but it has to be supported by arguments.
+            \item The applicant can timely pay one additional fee for the third invention to be searched in the international PCT phase. In the European phase, the applicant can limit the application to the third invention.
+            \item The applicant can ignore the invitation. In the European phase, the applicant can file a divisional application directed to the third invention.
+            \item The applicant can ignore the invitation. In the European phase, the applicant will again receive an invitation to pay additional search fees.
+        \end{enumerate}
+        
+        \item (from L3-14)
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item What is the purpose of the requirement of "unity of invention"?
+            \item What is the time limit to pay the additional search fee in the international phase?
+            \item To whom must the additional search fee be paid?
+            \item When must the applicant pay a "protest fee"? What time limit applies?
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 3
+    L3-16 
+    \begin{enumerate}[label=(\alph*)]
+        \item When must the international search report be established?
+        \item What are the contents of the international search report?
+        \item What can the applicant do after receiving the international search report, apart from filing a demand for international preliminary examination?
+        \item What time limits apply? Where must the applicant file the amendments?
+        \item In what form must the applicant file the amendments and any accompanying letter or statement? In which language?
+        \item When are amendments to the claims under PCT Article 19 not allowed?
+    \end{enumerate}
+
+    \item % Question 4
+    L3-20 (Basic selection) \\
+    An applicant has filed an international application on 9 May 2023 as a first filing at the EPO as receiving Office, in English. The EPO acted as International Searching Authority and the international search report was transmitted to the applicant in December 2023; the written opinion (WO-ISA) suggests that the invention is patentable. \\
+    The applicant being afraid that there is prior art which was not discovered by the EPO as ISA, considers filing a request for supplementary international search to be carried out by the Intellectual Property Office of Singapore.
+    \begin{enumerate}[label=(\alph*)]
+        \item Until when can the applicant file a request for supplementary international search [PCT/IB/375]? Where should the request be filed? In which language should the request be filed?
+        \item What fees must be paid in respect of the request for supplementary international search? By when must the fees be paid? What is the amount of the fees?
+        \item When will the supplementary international search start?
+        \item By when must the supplementary international search report be established? Will a written opinion be issued together with the supplementary international search report?
+        \item Will the supplementary international search report cite any document which was already cited in the international search report established by the EPO?
+        \item Will the supplementary international search report be published? If so, in what form?
+    \end{enumerate}
+
+    \item % Question 5
+    L3-27 \\
+    A US applicant wants to request a demand for international preliminary examination at the USPTO for an international application filed on 29 December 2016 without any claiming priority. The ISR and WO-ISA, established by the USPTO as ISA, were transmitted to the applicant on 26 June 2018. \\
+    However, due to a severe hurricane, the USPTO was closed on 29 and 30 October 2018, and the applicant was not able to submit the demand on 29 October 2018. \\
+    Can the demand still be validly filed if today is 31 October 2018?
+
+    \item % Question 6
+    In which cases can the EPO act as IPEA? \\
+    (multiple choice)
+    \begin{enumerate}[label=(\alph*)]
+        \item Spanish office was the ISA
+        \item Nordic Patent Institute was the ISA
+        \item USPTO was the ISA
+        \item EPO was the ISA
+    \end{enumerate}
+
+    \item % Question 7
+    What documents must an applicant file when filing Article 19 amendments? \\
+    (single choice)
+    \begin{enumerate}[label=(\alph*)]
+        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments
+        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments 
+        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
+        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
+    \end{enumerate}
+
+\end{enumerate}
+
+
+
 
 \begin{center}
 
@@ -666,6 +800,138 @@ Today, Monday 27 November 2017, an applicant wants to file an international appl
      \end{enumerate}
        \end{enumerate}
 
+    \section{October 09, 2025}
+
+\begin{enumerate}[label=\textbf{Answer \arabic*}]
+
+    \item % Question 1
+    L3-06 - T/F question (Basic selection) \\
+    An international application is filed by a Danish national at the Danish Patent and Trademark Office as receiving Office. \\
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*)]
+        \item The IA may be filed in…
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... Danish --- \textbf{True}
+            \item ... English --- \textbf{True}
+            \item ... Swedish --- \textbf{True}
+        \end{enumerate}
+
+        \item The applicant may select as ISA:
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... the Danish national office. --- \textbf{False}
+            \item ... the EPO --- \textbf{True}
+            \item ... the Swedish national office. --- \textbf{True}
+            \item ... the Nordic Patent Institute. --- \textbf{True}
+        \end{enumerate}
+        
+        \item \textit{The application is filed in Danish.} \\
+        For each of the statements below, indicate whether the statement is true or false
+        
+        \vspace{0.5em}
+        The EPO as ISA…
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... does not require a translation for the purposes of international search. --- \textbf{False}
+            \item ... requires a translation into any one of the 10 publication languages for the purposes of international search. --- \textbf{False}
+            \item ... requires a translation into English, French or German for the purposes of international search. --- \textbf{True}
+            \item[] \textit{The Nordic Patent Institute as ISA...}
+            \item ... does not require a translation for the purposes of international search. --- \textbf{True}
+            \item ... requires a translation into any one of the 10 publication languages for the purposes of international search. --- \textbf{True}
+            \item ... requires a translation into English, French or German for the purposes of international search. --- \textbf{False}
+        \end{enumerate}
+
+        \item \textit{The applicant has filed the international application in Danish and has indicated the EPO as International Searching Authority. The applicant is in the progress of making a translation into English. The application was filed by fax with the Danish Patent and Trademark Office on a day on which the Danish Patent and Trademark Office and the International Bureau were closed.} \\
+        For each of the statements below, indicate whether the statement is true or false: \\
+        The translation must be filed ...
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... within one month from the date of receipt by the Danish Patent and Trademark Office to avoid any late furnishing fee(s). --- \textbf{True}
+            \item ... within one month from the date of receipt by the EPO to avoid any late furnishing fee(s). --- \textbf{False}
+            \item ... when the 1m period was missed, the translation may still be provided as long as a late furnishing fee is paid.
+            --- \textbf{True}
+            \item ... when the rO issues an invitation to supply a missing translation, the ultimate time limit to respond is always one month from the date of the invitation. --- \textbf{False}
+        \end{enumerate}
+        
+        \item \textit{The applicant has timely filed the translation into English to the Danish Patent and Trademark Office.} \\
+        The international publication of the international application will take place in…
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item ... Danish. --- \textbf{False}
+            \item ... English. --- \textbf{True}
+            \item ... in Danish with the title and the abstract also in English. --- \textbf{False}
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 2
+    L3-08 - T/F question (Basic selection) \\
+    A PCT application was filed with the EPO. As the International Searching Authority, the EPO considered that the application was not unitary. The invention first mentioned in the claims was searched and an invitation to pay two additional international search fees was sent to the applicant last week, 8 March 2023. The third invention, which has not yet been searched, is the only invention that the applicant would like to pursue in the European phase before the EPO. \\
+    Today is 17 March 2023.
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false:
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item In the international PCT phase, the applicant can file a protest with the EPO and request that a full search is made. The protest is free of charge, but it has to be supported by arguments. --- \textbf{False} --- a protest fee has to be paid under [\textbf{Rule 40}].
+            \item The applicant can timely pay one additional fee for the third invention to be searched in the international PCT phase. In the European phase, the applicant can limit the application to the third invention.
+            \item The applicant can ignore the invitation. In the European phase, the applicant can file a divisional application directed to the third invention. --- \textbf{True}
+            \item The applicant can ignore the invitation. In the European phase, the applicant will again receive an invitation to pay additional search fees.
+        \end{enumerate}
+        
+        \item (from L3-14)
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item What is the purpose of the requirement of "unity of invention"?
+            \item What is the time limit to pay the additional search fee in the international phase?
+            \item To whom must the additional search fee be paid?
+            \item When must the applicant pay a "protest fee"? What time limit applies?
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 3
+    L3-16 
+    \begin{enumerate}[label=(\alph*)]
+        \item When must the international search report be established?
+        \item What are the contents of the international search report?
+        \item What can the applicant do after receiving the international search report, apart from filing a demand for international preliminary examination?
+        \item What time limits apply? Where must the applicant file the amendments?
+        \item In what form must the applicant file the amendments and any accompanying letter or statement? In which language?
+        \item When are amendments to the claims under PCT Article 19 not allowed?
+    \end{enumerate}
+
+    \item % Question 4
+    L3-20 (Basic selection) \\
+    An applicant has filed an international application on 9 May 2023 as a first filing at the EPO as receiving Office, in English. The EPO acted as International Searching Authority and the international search report was transmitted to the applicant in December 2023; the written opinion (WO-ISA) suggests that the invention is patentable. \\
+    The applicant being afraid that there is prior art which was not discovered by the EPO as ISA, considers filing a request for supplementary international search to be carried out by the Intellectual Property Office of Singapore.
+    \begin{enumerate}[label=(\alph*)]
+        \item Until when can the applicant file a request for supplementary international search [PCT/IB/375]? Where should the request be filed? In which language should the request be filed?
+        \item What fees must be paid in respect of the request for supplementary international search? By when must the fees be paid? What is the amount of the fees?
+        \item When will the supplementary international search start?
+        \item By when must the supplementary international search report be established? Will a written opinion be issued together with the supplementary international search report?
+        \item Will the supplementary international search report cite any document which was already cited in the international search report established by the EPO?
+        \item Will the supplementary international search report be published? If so, in what form?
+    \end{enumerate}
+
+    \item % Question 5
+    L3-27 \\
+    A US applicant wants to request a demand for international preliminary examination at the USPTO for an international application filed on 29 December 2016 without any claiming priority. The ISR and WO-ISA, established by the USPTO as ISA, were transmitted to the applicant on 26 June 2018. \\
+    However, due to a severe hurricane, the USPTO was closed on 29 and 30 October 2018, and the applicant was not able to submit the demand on 29 October 2018. \\
+    Can the demand still be validly filed if today is 31 October 2018?
+
+    \item % Question 6
+    In which cases can the EPO act as IPEA? \\
+    (multiple choice)
+    \begin{enumerate}[label=(\alph*)]
+        \item Spanish office was the ISA
+        \item Nordic Patent Institute was the ISA
+        \item USPTO was the ISA
+        \item EPO was the ISA
+    \end{enumerate}
+
+    \item % Question 7
+    What documents must an applicant file when filing Article 19 amendments? \\
+    (single choice)
+    \begin{enumerate}[label=(\alph*)]
+        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments
+        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments 
+        \item Only the amended claims \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
+        \item A complete set of claims in replacement of the claims originally filed \& a letter indicating the differences plus the basis for the amendments \& statement by the applicant explaining the amendment and indicating any impact it might have on the description and the drawings
+    \end{enumerate}
+
+\end{enumerate}
 
 
 \end{document}
